Moving to ogen for router and type generation. WIP.
